--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,12 @@ body{
     font-size: 30px;
     letter-spacing: 25px;
     text-shadow: 3px 2px 6px gray;
+    transition: all 2s;
 }
+.headline:hover{
+    transform: translateY(-10px);
 
+ }
 /* slider */
 
 * {
@@ -198,7 +202,7 @@ body{
 .offer__slider #current {
     font-size: 50px;
     font-weight: 700;
-    color:  #DCCA87
+    color:  #5b5959;
 }
 
 .offer__slide {
@@ -235,8 +239,8 @@ body{
         grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
         display: grid;
         gap: 25px;
-        overflow: hidden;
     }
+
     .images .image{
     overflow: hidden;
  }
@@ -246,14 +250,12 @@ body{
     height: 100%;
     object-fit: cover;
     display: block;
-    transition: all 1.3s;
+    transition: all 1.5s;
 
    }
 
    .gallery .images img:hover{
-    transform: scale(1.5);
-    overflow: hidden;
-    transition: 2s;
+    transform: scale(1.4);
    }
 
    
@@ -283,6 +285,11 @@ body{
   footer{
     background: #DCCA87;
 
+  }
+  footer label{
+    display: flex;
+    justify-content: center;
+    align-items:center;
   }
 
   .info_footer{
@@ -412,10 +419,20 @@ body{
    align-items:center;
  }
 
+ .client_gallery .image img:hover{
+    /* transform: scale(1.2); */
+    transform: translateY(-7px);
+ }
+
+ 
+ .client_gallery .image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    transition: all 1s;
+ }
  /* clients */
-
- /* scrole */
-
 
 /* contact */
 .contact_container{
