--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,7 @@
-  @import url(https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap&subset=cyrillic-ext);
 
 
   /* header */
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    cursor: pointer;
-}
-img {
-  width: 100%;
-  height: 100%;
-  }
-.logo a{
-  color:rgba(0, 0, 0, 0.62);
-
-}
+  
 header {
     padding: 40px;
     display: flex;
@@ -37,29 +23,16 @@ header ul li {
 
 header a {
     text-decoration: none;
-    color: rgba(0, 0, 0, 0.62);
+    color: rgb(48, 48, 48);
 
 }
-header .logo a:hover{
-    text-shadow: 5px 4px 4px rgb(74, 74, 74);
-    color: #000;
 
-
-}
 header a:hover {
-    text-shadow: 5px 4px 4px rgb(74, 74, 74);
-
+    color: rgba(0, 0, 0, 0.402);
 }
 
-/* header */
-body{
-  background-image:url("../images/forbg2.jpeg");
-  background-repeat:repeat;
-  background-size:contain;
-  background-attachment: fixed;
+/* header end*/
 
-  
-}
 
 .headline {
     color: black;
@@ -71,25 +44,16 @@ body{
 }
 .headline:hover{
     transform: translateY(-10px);
+    opacity: .3;
 
  }
 /* slider */
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: Roboto, sans-serif
-}
-
-
 
 .container {
     max-width: 1200px;
     margin: 0 auto;
     
 }
-
 
 .title {
     font-size: 30px;
@@ -223,8 +187,8 @@ body{
     background: transparent;
 
 }
-
 /* slider */
+
 /* Portraits */
 .gallery{
     width: 90%;
@@ -258,57 +222,12 @@ body{
     transform: scale(1.4);
    }
 
-   
    .portraiits_hd{
     padding: 0  0 40px 0;
    }
   /* Portraits */
 
-  /* footer */
-  footer p {
-      text-align: center;
-      color: gray;
-      padding: 20px;
-
-  }
-   footer a{
-    color:gray !important
-   }
-
-   footer a:hover{
-    color:black ;
-   }
-
-   footer p:hover{
-    color:#000000;
-   }
-  footer{
-    background: #DCCA87;
-
-  }
-  footer label{
-    display: flex;
-    justify-content: center;
-    align-items:center;
-  }
-
-  .info_footer{
-    display: flex;
-    justify-content: space-around;
-    text-align: center;
-    width: 80%;
-    margin: 0 auto;
-    padding: 50px 0;
-
-  }
-  footer input{
-    border:none;
-    padding: 10px 10px;
-    background: white;
-
-  }
-
- /* footer */
+  
   nav {
       position: absolute;
       right: 0;
@@ -336,7 +255,9 @@ body{
   nav a:hover{
     color:black
   }
- /* about */
+
+
+ /* ABOUT */
 
 .about .kann_pic{
     margin: 0  40px;
@@ -371,7 +292,7 @@ body{
 }
 
 
- /* about */
+ /* ABOUT */
 
 
  /* awarts */
@@ -393,9 +314,8 @@ body{
  .awards .text p:hover{
     color:#5b5959
  }
-
- 
  /* awarts */
+
 
  /* clients */
  .client_gallery .title{
@@ -409,7 +329,6 @@ body{
     width: 100%;
     padding: 50px 0;
 
-
  }
  .client_gallery .images{
    width: 70%;
@@ -420,7 +339,6 @@ body{
  }
 
  .client_gallery .image img:hover{
-    /* transform: scale(1.2); */
     transform: translateY(-7px);
  }
 
@@ -433,6 +351,7 @@ body{
     transition: all 1s;
  }
  /* clients */
+
 
 /* contact */
 .contact_container{
@@ -459,10 +378,10 @@ body{
 ::placeholder {
     color: rgb(66, 66, 66);
 }
+
  .contact{
     width: 35%;
  }
-
  
  .contact button{
     margin: 10px;
@@ -480,5 +399,4 @@ body{
     color:black
 
  }
-
 /* contact */
