--- a/css/global.css
+++ b/css/global.css
@@ -12,12 +12,12 @@ img {
   width: 100%;
   height: 100%;
   }
-
+  
+main{
+  padding: 80px 0;
+}
   body{
-    background-image:url("../images/forbg2.jpeg");
-    background-repeat:repeat;
-    background-size:contain;
-    background-attachment: fixed;
+   background: #ebebeb;
   }
 
   /* footer */
